@@ -1,3 +1,14 @@
+version ?
+
+* Added an option to use random records from file for url.
+  One can load a 10000 records and use them in a random fashion for
+  1000 clients. We are not ensuring uniquickness of records used.
+  Two more tags added to assist in doing that: FORM_RECORDS_FILE_MAX_NUM
+  the number of records to load from a records file, and FORM_RECORDS_RANDOM,
+  which says to the program to use the records loading randomly and not to link
+  each records to a client by index.
+  File with example of usage added is: ./conf-examples/random_file_records.conf
+
 version 0.42, stable, September 05, 2007, svn 503
 
 * Detailed logging option (-x) added outputs to <batch-name>.log file all
